# PhotoManager

./: CMakeLists.txt  DOCKER_GUI_GUIDE_APP.txt  Dockerfile_APP  README.txt  docker-compose_APP.yml  main.cpp  main_APP.cpp
Business Logic Layer/: ChainOfResponsability.cpp  ChainOfResponsability.h  ChainOfResponsability_APP.cpp  Command.cpp  Command.h  Command_APP.cpp  Command_APP.h  EditHistory.cpp  EditHistory.h  FileSizeFormatter_APP.h  ImageProcessor.cpp  ImageProcessor.h  ImageProcessor_APP.cpp  ImageProcessor_APP.h  PhotoContentProxy.h  PhotoContentProxy_APP.h  PhotoManagementFacade.cpp  PhotoManagementFacade.h  PhotoManagementFacade_APP.cpp  PhotoManagementFacade_APP.h  PhotoMemento.cpp  PhotoMemento.h  PhotoSearchCriteria.cpp  PhotoSearchCriteria.h  PhotoSearchCriteria_APP.cpp  PhotoSearchCriteria_APP.h  PhotoVisitor.h  PhotoVisitor_APP.cpp  SearchEngine.h  SearchEngine_APP.h  TagFlyweight.h
Domain/: Album.h  Photo.cpp  Photo.h  User.cpp  User.h
Infrastructure layer/: Aspect_APP.h  AuthenticationFactory.cpp  AuthenticationFactory.h  AuthenticationFactory_APP.h  AuthenticationService.cpp  AuthenticationService.h  AuthenticationService_APP.cpp  AuthenticationService_APP.h  Logger.cpp  Logger.h  Logger_APP.cpp  Logger_APP.h  MetricsCollector_APP.h  PhotoRepository.cpp  PhotoRepository.h  PhotoRepository_APP.cpp  PhotoRepository_APP.h  StorageStrategy.cpp  StorageStrategy.h  StorageStrategy_APP.cpp  StorageStrategy_APP.h  UserRepository.cpp  UserRepository.h  UserRepository_APP.cpp  UserRepository_APP.h
Presentation Layer (QT GUI)/: AdminPanel.cpp  AdminPanel.h  AdminPanel_APP.cpp  LoginWindow.cpp  LoginWindow.h  LoginWindow_APP.cpp  LoginWindow_APP.h  MainWindow.cpp  MainWindow.h  MainWindow_APP.cpp  MainWindow_APP.h  PhotoDetailsDialog.cpp  PhotoDetailsDialog.h  PhotoDetailsDialog_APP.cpp  PhotoDetailsDialog_APP.h  SearchDialog.cpp  SearchDialog.h  SearchDialog_APP.cpp  SearchDialog_APP.h  SearchResultsWindow_APP.cpp  SearchResultsWindow_APP.h  SettingsDialog.cpp  SettingsDialog.h  UploadDialog.cpp  UploadDialog.h  UploadDialog_APP.cpp  UploadDialog_APP.h
Presentation Layer (QT GUI)/Theme/: ThemeManager.cpp  ThemeManager.h
tests/: main_APP.cpp  test_aspect_metrics_APP.cpp  test_aspect_metrics_APP.h  test_facade_APP.cpp  test_facade_APP.h  test_photo_APP.cpp  test_photo_APP.h  test_repository_APP.cpp  test_repository_APP.h  test_search_APP.cpp  test_search_APP.h  test_search_dialog_APP.cpp  test_search_dialog_APP.h  test_theme_APP.cpp  test_theme_APP.h  test_ui_APP.cpp  test_ui_APP.h  test_upload_dialog_APP.cpp  test_upload_dialog_APP.h  test_user_APP.cpp  test_user_APP.h
